--- a/public/css/_projectCards.scss
+++ b/public/css/_projectCards.scss
@@ -14,6 +14,9 @@
       text-overflow: ellipsis;
       width: 100%;
   }
+  .textBox:hover p {
+      white-space: normal;
+  }
 
   .headerWrapper {
     display: -webkit-box;
