--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6707,45 +6707,5 @@ span.CodeMirror-selectedtext {
         position: absolute;
         border: none; } }
 
-.news-page div {
-  width: 100%; }
-
-.news-page #TableComponent {
-  display: none; }
-
-.news-page #ProjectPreview {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center; }
-
-.news-page .well {
-  width: 300px;
-  height: 300px;
-  display: flex; }
-  .news-page .well hr,
-  .news-page .well div {
-    display: none; }
-  .news-page .well .short-preview {
-    display: block; }
-    .news-page .well .short-preview .logo {
-      display: block;
-      height: auto;
-      padding: 0; }
-      .news-page .well .short-preview .logo img {
-        width: 100%;
-        max-height: 300px;
-        position: absolute; }
-    .news-page .well .short-preview .title {
-      display: flex;
-      height: 100%;
-      overflow: hidden;
-      text-align: center;
-      align-items: center;
-      padding: 0; }
-      .news-page .well .short-preview .title h1 {
-        font-size: 30px;
-        width: 100%;
-        text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white; }
-      .news-page .well .short-preview .title p {
-        position: absolute;
-        align-self: start; }
+.news-page .col-md-4 {
+  min-height: 270px; }
