--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6053,14 +6053,14 @@ textarea {
   cursor: pointer; }
   .parent-pCards:hover {
     color: #2ec866; }
+    .parent-pCards:hover .textBox p {
+      white-space: normal; }
   .parent-pCards .headerWrapper h3,
   .parent-pCards .textBox p {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
     width: 100%; }
-  .parent-pCards .textBox:hover p {
-    white-space: normal; }
   .parent-pCards .headerWrapper {
     display: -webkit-box;
     display: -webkit-flex;
