--- a/public/css/_projectCards.scss
+++ b/public/css/_projectCards.scss
@@ -1,6 +1,5 @@
 .parent-pCards {
-  margin-top: 3%;
-  margin-bottom: 3%;
+  margin: 3%;
   border-radius: 10px;
   background-image: -webkit-linear-gradient(270deg, #fff, #fff);
   background-image: linear-gradient(180deg, #fff, #fff);
