--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6044,8 +6044,7 @@ textarea {
   padding-top: 40px; }
 
 .parent-pCards {
-  margin-top: 3%;
-  margin-bottom: 3%;
+  margin: 3%;
   border-radius: 10px;
   background-image: -webkit-linear-gradient(270deg, #fff, #fff);
   background-image: linear-gradient(180deg, #fff, #fff);
