--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -21,10 +21,10 @@ $navbar-height: 56px;
 $navbar-default-bg: #fff;
 $navbar-default-border: #e0e0e0;
 $navbar-default-color: #757575;
-$navbar-default-link-color: #262626;
+$navbar-default-link-color: #f1f1f1;
 $navbar-default-link-hover-bg: transparent;
 $navbar-default-link-active-bg: transparent;
-$navbar-default-link-active-color: #262626;
+$navbar-default-link-active-color: #f1f1f1;
 
 $panel-heading-padding: 20px 30px;
 $panel-body-padding: 30px;
