--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6078,33 +6078,190 @@ textarea {
     color: #2ec866; }
     .card:hover .textBox p {
       white-space: normal; }
-  .card .headerWrapper h3,
+  .card .headerWrapper h2,
   .card .textBox p {
     overflow: hidden;
     white-space: normal;
     text-overflow: ellipsis;
     width: 100%; }
-  .card .headerWrapper {
+  .card .cardbody {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    height: 75px;
-    padding: 1.5%;
+    width: 100%;
+    height: 60%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
     -webkit-box-align: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
-    text-align: center;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
-    .card .headerWrapper .imageWrapper {
-      width: auto;
-      max-height: 100%;
-      margin: 0; }
-  .card .infoWrapper {
-    padding: 5%;
-    font-family: Lato, sans-serif;
+    align-items: center;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.07); }
+    .card .cardbody .mentor_logo_holder {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      height: 50%;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-box-align: end;
+      -webkit-align-items: flex-end;
+      -ms-flex-align: end;
+      align-items: flex-end; }
+      .card .cardbody .mentor_logo_holder .mentorlogo {
+        width: 8vh;
+        height: 8vh;
+        border-radius: 999px;
+        background-position: 50% 50%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2); }
+    .card .cardbody .card_body_bottom {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      height: 45%;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center; }
+      .card .cardbody .card_body_bottom .projecttitle {
+        margin-top: 0px;
+        margin-bottom: 5px;
+        font-family: Ubuntu, Helvetica, sans-serif;
+        color: #000;
+        font-size: 1.5em;
+        line-height: 1.5em;
+        font-weight: 500;
+        text-align: center; }
+      .card .cardbody .card_body_bottom .projectdescription {
+        padding-right: 1vw;
+        padding-left: 1vw;
+        font-family: Ubuntu, Helvetica, sans-serif;
+        color: rgba(0, 0, 0, 0.33);
+        font-size: 1em;
+        line-height: 1.5em;
+        font-weight: 400;
+        text-align: center; }
+  .card .cardactivity {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    height: 20%;
+    margin-bottom: 4%;
+    padding-top: 1.5%;
+    padding-bottom: 1.5%;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center; }
+    .card .cardactivity .tasks {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      height: 100%;
+      margin-left: 0.5vw;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-box-align: start;
+      -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+      align-items: flex-start; }
+      .card .cardactivity .tasks .open_task_title {
+        margin-top: 0px;
+        margin-bottom: 0px;
+        font-family: Ubuntu, Helvetica, sans-serif;
+        color: rgba(0, 0, 0, 0.66);
+        font-size: 1.5em;
+        line-height: 1em;
+        font-weight: 500;
+        text-align: left; }
+      .card .cardactivity .tasks .task {
+        font-family: Ubuntu, Helvetica, sans-serif;
+        color: rgba(0, 0, 0, 0.33);
+        font-size: 1em;
+        line-height: 1.5em;
+        font-weight: 400;
+        text-align: left; }
+  .card .w-button {
+    display: inline-block;
+    padding: 9px 15px;
+    background-color: #3898EC;
+    color: white;
+    border: 0;
+    line-height: inherit;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 0; }
+  .card .cardbutton {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 45%;
+    height: 12%;
+    margin-bottom: 3px;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgba(0, 0, 0, 0.05);
+    border-radius: 999px;
+    background-image: -webkit-linear-gradient(270deg, #fff, #fff);
+    background-image: linear-gradient(180deg, #fff, #fff);
+    box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.05);
+    font-family: Ubuntu, Helvetica, sans-serif;
     color: rgba(0, 0, 0, 0.66);
-    font-weight: 300; }
+    font-size: 1em;
+    line-height: 1em;
+    font-weight: 400; }
+    .card .cardbutton:hover {
+      border-style: none;
+      background-image: -webkit-linear-gradient(270deg, #3f3ff5, #3f3ff5);
+      background-image: linear-gradient(180deg, #3f3ff5, #3f3ff5);
+      box-shadow: 0 4px 10px 0 rgba(54, 54, 219, 0.4);
+      color: #fff; }
   .card .footer-pCards {
     display: -webkit-box;
     display: -webkit-flex;
