--- a/public/css/_projectCards.scss
+++ b/public/css/_projectCards.scss
@@ -118,7 +118,7 @@
         color: #000;
         font-size: 1.5em;
         line-height: 1.5em;
-        font-weight: 500;
+        //font-weight: 500;
         text-align: center;
       }
 
