--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6152,7 +6152,7 @@ textarea {
         font-family: Ubuntu, Helvetica, sans-serif;
         color: #000;
         font-size: 1.5em;
-        font-weight: 500;
+        line-height: 1.5em;
         text-align: center; }
       .card .cardbody .card_body_bottom .projectdescription {
         padding-right: 1vw;
