--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1060,7 +1060,7 @@ body {
   font-size: 15px;
   line-height: 1.57143;
   color: #333333;
-  background-color: #f4f4f4; }
+  background-color: #fff; }
 
 input,
 button,
@@ -1098,7 +1098,7 @@ img {
 .img-thumbnail {
   padding: 4px;
   line-height: 1.57143;
-  background-color: #f4f4f4;
+  background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
@@ -2059,7 +2059,7 @@ th {
   .table > tbody + tbody {
     border-top: 2px solid #ddd; }
   .table .table {
-    background-color: #f4f4f4; }
+    background-color: #fff; }
 
 .table-condensed > thead > tr > th,
 .table-condensed > thead > tr > td,
@@ -3588,7 +3588,7 @@ tbody.collapse.in {
         border-color: #eeeeee #eeeeee #ddd; }
     .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
       color: #555555;
-      background-color: #f4f4f4;
+      background-color: #fff;
       border: 1px solid #ddd;
       border-bottom-color: transparent;
       cursor: default; }
@@ -3642,7 +3642,7 @@ tbody.collapse.in {
     .nav-tabs-justified > .active > a, .nav-tabs.nav-justified > .active > a,
     .nav-tabs-justified > .active > a:hover, .nav-tabs.nav-justified > .active > a:hover,
     .nav-tabs-justified > .active > a:focus, .nav-tabs.nav-justified > .active > a:focus {
-      border-bottom-color: #f4f4f4; } }
+      border-bottom-color: #fff; } }
 
 .tab-content > .tab-pane {
   display: none; }
@@ -4323,7 +4323,7 @@ a.badge:hover, a.badge:focus {
   padding: 4px;
   margin-bottom: 23px;
   line-height: 1.57143;
-  background-color: #f4f4f4;
+  background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 4px;
   -webkit-transition: border 0.2s ease-in-out;
@@ -6881,3 +6881,30 @@ span.CodeMirror-selectedtext {
 .news-page .show-grid {
   display: flex;
   flex-wrap: wrap; }
+
+.news-page .header {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 15vh;
+  padding-bottom: 15px;
+  padding-left: 3vw;
+  -webkit-box-align: end;
+  -webkit-align-items: flex-end;
+  -ms-flex-align: end;
+  align-items: flex-end; }
+  .news-page .header .titlepage {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-family: Ubuntu, Helvetica, sans-serif;
+    color: #000;
+    font-size: 3.5em;
+    line-height: 1em;
+    font-weight: 700; }
+
+.news-page .body {
+  min-height: 75vh;
+  background-image: -webkit-linear-gradient(270deg, #f5f5f5, #f5f5f5);
+  background-image: linear-gradient(180deg, #f5f5f5, #f5f5f5);
+  box-shadow: 0 -1px 6px 0 rgba(0, 0, 0, 0.1); }
