--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7031,3 +7031,51 @@ span.CodeMirror-selectedtext {
     .news-page .body .cardheader .search {
       font-style: italic;
       font-weight: 300; }
+
+.menubar {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 10vh;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-image: -webkit-linear-gradient(270deg, #f5f5f5, #f5f5f5);
+  background-image: linear-gradient(180deg, #f5f5f5, #f5f5f5);
+  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.15); }
+  .menubar .menubarleft {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 33vw;
+    height: 100%;
+    margin-right: 34vw;
+    padding-left: 2vw;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center; }
+    .menubar .menubarleft .titlelogo {
+      margin-top: 0px;
+      margin-right: 5vw;
+      margin-bottom: 0px;
+      font-family: Ubuntu, Helvetica, sans-serif;
+      color: rgba(0, 0, 0, 0.66);
+      font-size: 1em;
+      line-height: 1em; }
+    .menubar .menubarleft .title_menu_element {
+      margin-top: 0px;
+      margin-right: 2vw;
+      margin-bottom: 0px;
+      font-family: Ubuntu, Helvetica, sans-serif;
+      color: rgba(0, 0, 0, 0.33);
+      font-size: 1em;
+      line-height: 1em;
+      font-weight: 500; }
