--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6882,6 +6882,10 @@ span.CodeMirror-selectedtext {
   display: flex;
   flex-wrap: wrap; }
 
-.header.navbar-default .navbar-brand,
-.header.navbar-default .navbar-nav > li > a {
-  color: rgba(0, 0, 0, 0.66); }
+.header {
+  background-image: -webkit-linear-gradient(270deg, #f5f5f5, #f5f5f5);
+  background-image: linear-gradient(180deg, #f5f5f5, #f5f5f5);
+  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.15); }
+  .header.navbar-default .navbar-brand,
+  .header.navbar-default .navbar-nav > li > a {
+    color: rgba(0, 0, 0, 0.66); }
