--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -30,6 +30,9 @@ $panel-heading-padding: 20px 30px;
 $panel-body-padding: 30px;
 
 @import url("//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800%7CRaleway:100,300,600,700,800");
+// @import url("https://code.getmdl.io/1.3.0/material.indigo-pink.min.css");
+// @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+// @import url("https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css");
 @import "vendor/bootstrap";
 @import "bootstrap";
 @import "base";
