updated profil view

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,4 +1,4 @@
-$body-bg: white;
+$body-bg: #f3f3f2;
 $line-height-base: 1.57142857;
 $link-color: #1d7cf4;
 $link-hover-decoration: none;
@@ -41,4 +41,5 @@ $panel-body-padding: 30px;
 @import "vendor/susy/susy";
 @import "about";
 @import "news-page";
+@import "profile";
 @import "header";
