--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1060,7 +1060,7 @@ body {
   font-size: 15px;
   line-height: 1.57143;
   color: #333333;
-  background-color: white; }
+  background-color: #f3f3f2; }
 
 input,
 button,
@@ -1098,7 +1098,7 @@ img {
 .img-thumbnail {
   padding: 4px;
   line-height: 1.57143;
-  background-color: white;
+  background-color: #f3f3f2;
   border: 1px solid #ddd;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
@@ -2059,7 +2059,7 @@ th {
   .table > tbody + tbody {
     border-top: 2px solid #ddd; }
   .table .table {
-    background-color: white; }
+    background-color: #f3f3f2; }
 
 .table-condensed > thead > tr > th,
 .table-condensed > thead > tr > td,
@@ -3588,7 +3588,7 @@ tbody.collapse.in {
         border-color: #eeeeee #eeeeee #ddd; }
     .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
       color: #555555;
-      background-color: white;
+      background-color: #f3f3f2;
       border: 1px solid #ddd;
       border-bottom-color: transparent;
       cursor: default; }
@@ -3642,7 +3642,7 @@ tbody.collapse.in {
     .nav-tabs-justified > .active > a, .nav-tabs.nav-justified > .active > a,
     .nav-tabs-justified > .active > a:hover, .nav-tabs.nav-justified > .active > a:hover,
     .nav-tabs-justified > .active > a:focus, .nav-tabs.nav-justified > .active > a:focus {
-      border-bottom-color: white; } }
+      border-bottom-color: #f3f3f2; } }
 
 .tab-content > .tab-pane {
   display: none; }
@@ -4323,7 +4323,7 @@ a.badge:hover, a.badge:focus {
   padding: 4px;
   margin-bottom: 23px;
   line-height: 1.57143;
-  background-color: white;
+  background-color: #f3f3f2;
   border: 1px solid #ddd;
   border-radius: 4px;
   -webkit-transition: border 0.2s ease-in-out;
@@ -7031,6 +7031,23 @@ span.CodeMirror-selectedtext {
     .news-page .body .cardheader .search {
       font-style: italic;
       font-weight: 300; }
+
+.profile-panel .name-box {
+  margin-left: 30px;
+  display: inline-block; }
+
+.profile-panel.contentbox {
+  background-color: white;
+  margin-top: 30px;
+  box-shadow: 0 -1px 6px 0 rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
+  padding: 30px 20px; }
+
+.profile-background {
+  background-color: black; }
+
+.avatar-border {
+  border: 1px solid #bdbdbd; }
 
 .header {
   background-image: -webkit-linear-gradient(270deg, #f5f5f5, #f5f5f5);
