--- a/public/css/_profile.scss
+++ b/public/css/_profile.scss
@@ -4,18 +4,19 @@
     display: inline-block;
   }
 
-  &.contentbox {
+  .contentbox {
     background-color: white;
     margin-top: 30px;
     box-shadow: 0 -1px 6px 0 rgba(0, 0, 0, 0.1);
     border-radius: 2px;
     padding: 30px 20px;
   }
+
+  .projects-tab{
+    border: 5px solid red;
+  }
 }
 
-.profile-background {
-  background-color: black;
-}
 
 .avatar-border {
   border: 1px solid rgb(189, 189, 189);
