--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7036,15 +7036,15 @@ span.CodeMirror-selectedtext {
   margin-left: 30px;
   display: inline-block; }
 
-.profile-panel.contentbox {
+.profile-panel .contentbox {
   background-color: white;
   margin-top: 30px;
   box-shadow: 0 -1px 6px 0 rgba(0, 0, 0, 0.1);
   border-radius: 2px;
   padding: 30px 20px; }
 
-.profile-background {
-  background-color: black; }
+.profile-panel .projects-tab {
+  border: 5px solid red; }
 
 .avatar-border {
   border: 1px solid #bdbdbd; }
