updated the profil

--- a/public/css/_base.scss
+++ b/public/css/_base.scss
@@ -92,3 +92,12 @@
   margin: auto;
   padding-top: 40px;
 }
+
+.table{
+    table-layout: fixed;
+    width: 100%;
+}
+
+th, td {
+    width: 100px;
+}
