--- a/public/css/_profile.scss
+++ b/public/css/_profile.scss
@@ -1,7 +1,7 @@
 .profile-panel {
   vertical-align: middle;
 
-  .activityChart{
+  .activityChart {
     vertical-align: middle;
     display: inline-block;
   }
@@ -9,6 +9,8 @@
   .name-box {
     margin-left: 30px;
     display: inline-block;
+    vertical-align: middle;
+    float: none;
   }
 
   .contentbox {
