--- a/public/css/_projectCards.scss
+++ b/public/css/_projectCards.scss
@@ -88,11 +88,12 @@
       .mentorlogo {
         width: 8vh;
         height: 8vh;
-        border-radius: 999px;
+        // border-radius: 999px;
         background-position: 50% 50%;
         background-size: cover;
         background-repeat: no-repeat;
         box-shadow: 0 1px 5px 0 rgba(0, 0, 0, .2);
+        // border: 1px solid rgb(189, 189, 189);
       }
     }
 
