--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -36,6 +36,7 @@ $panel-body-padding: 30px;
 @import "vendor/bootstrap";
 @import "bootstrap";
 @import "base";
+@import "heatmap";
 @import "projectCards";
 @import "codemirror";
 @import "vendor/susy/susy";
